# em-ai-labs

./: .coverage  .env.example  .gitattributes  .gitignore  .pip-audit.toml  AGENTS.md  LICENSE  PHASE_1C_INTEGRATION.md  PLAN.md  README.md  coverage.xml  local_ci.yml.bat  pyproject.toml  requirements.txt  ruff.toml  run_checks.bat  setup.bat  setup.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  security.yaml
configs/: config.json  config.yaml.example
docs/: ARCHITECTURE-DIAGRAMS.md  P0-COMPLETION-SUMMARY.md  adr-001  adr-p1-extensibility  adr-p2-enterprise-readiness.md  arch and design.md  architecture.md  guardrails.md  observability.md  security.md
requirements/: base.txt  dev.txt
src/: agent_manager.py  application_service.py  main.py  router.py
src/agents/: agent_factory.py  agent_registry.py  base_agent.py  general_agent.py  weather_agent.py
src/apps/: health_server.py
src/core/: container.py
src/guardrails/: __init__.py  exceptions.py  execution_guardrail.py  input_guardrail.py  output_guardrail.py
src/memory/: __init__.py  base_memory.py  conversation_memory.py  memory_factory.py  memory_registry.py
src/middleware/: __init__.py  circuit_breaker.py  retry.py
src/observability/: tracing.py
src/orchestration/: __init__.py  executor.py  models.py  orchestrator.py  planner.py  react_loop.py  task_graph.py
src/providers/: __init__.py  base_provider.py  claude_provider.py  ollama_provider.py  provider_factory.py
src/runtimes/: base_runtime.py  custom_runtime.py  langchain_runtime.py  runtime_factory.py
src/tools/: base_tool.py  calculator_tool.py  gsheets_tool.py  tool_registry.py  vision_extractor.py  weather_tool.py  web_search_tool.py
src/utils/: __init__.py  config_loader.py  log_filters.py  logging_utils.py  tracing.py
tests/: conftest.py  pytest.ini  test_local_llm.py  test_weather.py  test_weather_agent.py
tests/architecture/: test_architecture_contracts.py
tests/integration/: test_ollama_integration.py  test_runtime_memory.py  test_weather.py
tests/observability/: test_logging_utils.py
tests/unit/: test_agent_manager_router.py  test_base_agent.py  test_claude_provider.py  test_config_manager.py  test_general_fallback_flow.py  test_langchain_runtime.py  test_local_llm.py  test_log_filters.py  test_main.py  test_main_smoke.py  test_ollama_client.py  test_p0_completion.py  test_provider_factory.py  test_react_loop.py  test_registry_factory.py  test_router.py  test_runtime_factory.py  test_service_container_memory.py  test_tool_registry.py  test_weather_agent.py  test_weather_tool.py
utils/: config_loader.py
