[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em-ai-labs"
version = "0.1.0"
description = "Enterprise-ready AI agent harness"
authors = [{name = "Janani Harihara Kumar"}]
requires-python = ">=3.11"
dependencies = [
    # Core infra
    "requests==2.33.0",
    "pyyaml==6.0.2",
    "python-dotenv==1.2.2",
    # LLM providers
    "openai==1.99.9",
    "anthropic==0.62.0",
    # LangChain ecosystem
    "langchain==0.3.30",
    "langchain-core==1.3.3",
    "langchain-openai==0.3.28",
    "langchain-anthropic==0.3.17",
    "langchain-community==0.3.27",
    "langchain-text-splitters==1.1.2",
    "langchain-ollama==0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.24.0",

    "ruff==0.15.0",
    "mypy==1.10.0",

    "bandit==1.7.9",
    "pip-audit==2.7.3",
]

# FIX: Changed from where = ["src"] to ensure "src" is recognized 
# as the top-level module namespace for "from src.utils import ..."
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ──────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short --cov=src --cov-report=term-missing --cov-fail-under=60"
pythonpath = ["."]
asyncio_mode = "auto" # ADDED: Automatically handles async def test_* functions
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: Integration tests requiring external services (Ollama, APIs)",
]

# ──────────────────────────────────────────────
# ruff — linting + formatting
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (common bugs and design issues)
    "UP",   # pyupgrade (use modern Python idioms)
    "N",    # pep8-naming conventions
    "LOG",  # flake8-logging (correct logger usage patterns)
    "G",    # flake8-logging-format (no f-strings in log calls)
]
ignore = [
    "E501",   # line too long — handled by formatter
    "W291",  # Trailing whitespace,
    "W293", # Blank line contains whitespace
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert statements in tests

# ──────────────────────────────────────────────
# mypy — static type checking
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]

