[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em-ai-labs"
version = "0.1.0"
description = "Enterprise-ready AI agent harness"
authors = [{name = "Janani Harihara Kumar"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    
    # =========================
    # Core infra
    # =========================
    "requests==2.33.0",
    "pyyaml==6.0.2",
    "python-dotenv==1.2.2",
    "httpx>=0.27.0",

    # =========================
    # Observability
    # =========================
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",

    # =========================
    # LLM providers
    # =========================
    "openai==1.99.9",
    "anthropic==0.62.0",

    # =========================
    # LangChain ecosystem
    # =========================
    "langchain==0.3.27",
    "langchain-core==0.3.72",
    "langchain-openai==0.3.28",
    "langchain-anthropic==0.3.17",
    "langchain-community==0.3.27",
    "langchain-text-splitters==0.3.9",
    "langchain-ollama==0.2.3",

    # Pinned directly (transitive dep of langchain-community) to patch
    # 9 CVEs fixed across 3.14.0/3.14.1 — see docs/security.md
    "aiohttp>=3.14.1",

    # =========================
    # Tool runtime deps (IMPORTANT - from your crash logs)
    # =========================

    # Google Sheets tool
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "google-api-python-client==2.143.0",

    # Vision / PDF extraction tool
    "pymupdf==1.24.9",

    # Web search tool (DuckDuckGo)
    "duckduckgo-search>=5.3.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "bandit",
    "pip-audit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ──────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short --cov=src --cov-report=term-missing --cov-fail-under=60"
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: Integration tests requiring external services (Ollama, APIs)",
]

# ──────────────────────────────────────────────
# ruff — linting + formatting
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (common bugs and design issues)
    "UP",   # pyupgrade (use modern Python idioms)
    "N",    # pep8-naming conventions
    "LOG",  # flake8-logging (correct logger usage patterns)
    "G",    # flake8-logging-format (no f-strings in log calls)
]
ignore = [
    "E501",   # line too long — handled by formatter
    "W291",  # Trailing whitespace,
    "W293", # Blank line contains whitespace
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert statements in tests

# ──────────────────────────────────────────────
# mypy — static type checking
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]